update scalatest version to latest version 3.2.19